fixed character not centered

--- a/src/App.css
+++ b/src/App.css
@@ -105,12 +105,3 @@
 .App {
   text-align: center;
 }
-
-.GameContainer {
-  border-color: #395EA9;
-  border-style: solid;
-  border-width: 0.3em;
-  margin: 24px;
-  box-shadow: -8px 8px #1D2C5E;
-}
-
